--- a/solarsystemrotation.html
+++ b/solarsystemrotation.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" type= "text/css" href="nightime.css">
+        <link rel="stylesheet" type= "text/css" href="daytime.css">
         <title><em>The 8 Underworlds</em></title>
         <style>
             body {
@@ -176,15 +176,15 @@
             </div>
            
             <div class="jupiter">
-                <h3><em><br><br><br><br><br><br>Why did Mercury skip classes one day? <br> 
+                <h3><em><br><br><br><br><br><br><br><br>Why did Mercury skip classes one day? <br> 
                     Because it had a very high temperature<br>
                     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> 
                         I'm sorry... click for more ;</a></em></h3>
             </div>
             
             <div class="saturn">
-                <h3><em><br><br><br><br><br><br>Why did Mercury skip classes one day? <br> 
-                    Because it had a very high temperature<br>
+                <h3><em><br><br><br><br><br><br><br><br>Insert very funny joke here <br> 
+                    Laugh laugh, I am laughing very very much<br>
                     <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" target="_blank"> 
                         I'm sorry... click for more ;</a></em></h3>
             </div>
