--- a/earthoh.html
+++ b/earthoh.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>
-  SolarSystemTemplate
+  Earth
 
 </title>
 
@@ -45,7 +45,7 @@
     <div class="starBanner"> </div>
 
     <div class="planetNameBanner">
-      MARS
+      Earth
     </div>
 
 
@@ -426,7 +426,7 @@
 
 <!--------------------------------------------------------------->
 
-</div>    <! end of main column section>
+</div>
 
 
 <!---------------------------------------------------------------------> 
@@ -449,3 +449,4 @@
 <!------------------------------------------------------------------->
    
 </html>
+     
